# globalip-memo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: env.rs  error.rs  logging.rs  main.rs  proc.rs  util.rs
v4/: globalip-config.json
v6/: globalip-config.json
